--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,5 +1,8 @@
 name: GitHub Actions Demo
-on: [push]
+on: 
+  push:
+    branches:
+      - build
 jobs:
   Explore-GitHub-Actions:
     runs-on: self-hosted
